--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,27 +3,69 @@
 {% block title %}Регистрация{% endblock %}
 
 {% block content %}
-<h2>Регистрация</h2>
+<h2 class="mb-4">Регистрация</h2>
 
-  <div class="alert alert-danger">Ошибка регистрации: проверьте корректность введённых данных.</div>
+{# глобальные ошибки формы #}
+{% if form.non_field_errors %}
+  <div class="alert alert-danger">
+      {{ form.non_field_errors }}
+  </div>
+{% endif %}
 
-<form method="post" enctype="multipart/form-data" action="#">
+<form method="post" action="{% url 'signup' %}" enctype="multipart/form-data" class="mb-4">
+    {% csrf_token %}
+
     <div class="mb-3">
-        <label for="username" class="form-label">Имя пользователя</label>
-        <input type="text" class="form-control" name="username" id="username">
+        <label for="id_username" class="form-label">Имя пользователя</label>
+        <input type="text"
+               name="username"
+               value="{{ form.username.value|default_if_none:'' }}"
+               class="form-control{% if form.username.errors %} is-invalid{% endif %}"
+               id="id_username">
+        {% for err in form.username.errors %}
+            <div class="invalid-feedback">{{ err }}</div>
+        {% endfor %}
     </div>
+
     <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" name="email" id="email">
+        <label for="id_email" class="form-label">Email</label>
+        <input type="email"
+               name="email"
+               value="{{ form.email.value|default_if_none:'' }}"
+               class="form-control{% if form.email.errors %} is-invalid{% endif %}"
+               id="id_email">
+        {% for err in form.email.errors %}
+            <div class="invalid-feedback">{{ err }}</div>
+        {% endfor %}
     </div>
+
     <div class="mb-3">
-        <label for="password" class="form-label">Пароль</label>
-        <input type="password" class="form-control" name="password" id="password">
+        <label for="id_password1" class="form-label">Пароль</label>
+        <input type="password"
+               name="password1"
+               class="form-control{% if form.password1.errors %} is-invalid{% endif %}"
+               id="id_password1">
+        {% for err in form.password1.errors %}
+            <div class="invalid-feedback">{{ err }}</div>
+        {% endfor %}
     </div>
+
     <div class="mb-3">
-        <label for="avatar" class="form-label">Аватарка (необязательно)</label>
-        <input type="file" class="form-control" name="avatar" id="avatar">
+        <label for="id_password2" class="form-label">Подтверждение пароля</label>
+        <input type="password"
+               name="password2"
+               class="form-control{% if form.password2.errors %} is-invalid{% endif %}"
+               id="id_password2">
+        {% for err in form.password2.errors %}
+            <div class="invalid-feedback">{{ err }}</div>
+        {% endfor %}
     </div>
+
+    <div class="mb-3">
+        <label for="id_avatar" class="form-label">Аватар (необязательно)</label>
+        <input type="file" name="avatar" class="form-control" id="id_avatar">
+    </div>
+
     <button class="btn btn-success" type="submit">Зарегистрироваться</button>
 </form>
 {% endblock %}
