--- a/templates/tag.html
+++ b/templates/tag.html
@@ -5,4 +5,5 @@
 {% block content %}
 <h2>Тег: <span class="badge bg-info">{{ tag_name }}</span></h2>
 {% include 'question_list.html' %}
+{% include 'pagination.html' %}
 {% endblock %}
